--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "chat-app",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "",
   "main": "index.js",
   "scripts": {
@@ -13,6 +13,6 @@
     "bad-words": "^3.0.0",
     "express": "^4.18.1",
     "nodemon": "^2.0.16",
-    "socket.io": "^4.5.1"
+    "socket.io": "~4.5.1"
   }
 }
